@@ -3,7 +3,7 @@
 ## Copyright (c) 2007 Felix Andrews <felix@nfrac.org>
 ## GPL version 2 or newer
 
-constructUI <- function(playState)
+constructUIManager <- function(playState)
 {
     menuEntries <-
         list(
@@ -27,7 +27,7 @@ constructUI <- function(playState)
     manager$insertActionGroup(annotationActionGroup(playState), 0)
     manager$insertActionGroup(globalActionGroup(playState), 0)
     ## user-defined actions:
-    uact <- eval(playwith.getOption("custom.actions"))
+    uact <- eval(playwith.getOption("custom.tools"))
     if (is.character(uact)) uact <- get(uact)
     if (is.function(uact)) uact <- uact(playState)
     if (is.list(uact)) {
@@ -54,7 +54,16 @@ initActions <- function(playState)
     ## TODO: wrap in try() and maybe catch errors
     initClickActions(playState)
     initIdentifyActions(playState)
+    ## custom init actions
+    customAct <- c(playwith.getOption("init.actions"),
+                   playwith$init.actions)
+    for (x in customAct) {
+        if (is.character(x)) x <- get(x)
+        if (is.function(x)) x(playState)
+        if (is.language(x)) eval(x, playState$env)
+    }
     ## make dynamic parameter tools
+    ## TODO: make these once only (in playwith())
     nm <- paste("/", playwith.getOption("parameters.toolbar"), sep="")
     paramTbar <- playState$uiManager$getWidget(nm)
     horiz <- (paramTbar["orientation"] == GtkOrientation["horizontal"])
@@ -76,4 +85,12 @@ updateActions <- function(playState)
     updateClickActions(playState)
     updatePlotActions(playState)
     updateIdentifyActions(playState)
+    ## custom update actions
+    customAct <- c(playwith.getOption("update.actions"),
+                   playwith$update.actions)
+    for (x in customAct) {
+        if (is.character(x)) x <- get(x)
+        if (is.function(x)) x(playState)
+        if (is.language(x)) eval(x, playState$env)
+    }
 }
